<resources>
    <string name="app_name">Travel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="travels">游记</string>
    <string name="discover">发现</string>
    <string name="destination">目的地</string>
    <string name="my">我的</string>

    <string name="load_more_item_layout_1">加载更多</string>
    <string name="load_no_more_comments_item_layout_1">无更多内容</string>
    <string name="register_login_btn_txt">登录/注册</string>
    <string name="my_share_tv">分享</string>
    <string name="my_concern_tv">关注</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_interest">兴趣标签</string>
    <string name="my_setting">设置</string>
    <string name="account_login">用户账号登录</string>
    <string name="dynamic_login">动态密码登录</string>
    <string name="account_name">账号</string>
    <string name="account_login_password">密码</string>
    <string name="dynamic_login_phone_number">手机号</string>
    <string name="dynamic_login_password">密码</string>
    <string name="account_register">账户注册</string>
    <string name="find_password_btn_text">找回密码</string>
    <string name="login_btn">登录</string>
    <string name="send_dynamic_password">发送动态密码</string>
    <string name="error_user_empty">用户名不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_number_empty">手机号不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="phone_number">手机号</string>
    <string name="register_btn">注册并登陆</string>
    <string name="username_has_existed">用户名已经存在</string>
    <string name="point">温馨提示</string>
    <string name="exit_message">你确定要退出当前登录用户吗？</string>
    <string name="exit_ok">确定</string>
    <string name="exit_cancel">取消</string>
    <string name="error_phone_empty">手机号不能为空</string>
    <string name="error_user_there">用户名已经存在</string>
    <string name="quit_txt">退出</string>
    <string name="change_password">修改密码</string>
    <string name="msg_set">消息设置</string>
    <string name="empty_local_image">清空缓存图片</string>
    <string name="picker_title">设置时间</string>
    <string name="saveto">保存到</string>
</resources>
