<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="340dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/close_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/close_btn_icon"/>

        <RadioGroup
            android:id="@+id/login_rg"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/account_login_radio_btn"
                android:button="@null"
                style="@style/CommonRadioButton"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/account_login"
                android:textSize="10pt"
                android:textColor="@color/common_radio_font_white_selector"/>
            <RadioButton
                android:id="@+id/dynamic_login_radio_btn"
                android:button="@null"
                style="@style/CommonRadioButton"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="10pt"
                android:text="@string/dynamic_login"
                android:textColor="@color/common_radio_font_white_selector"/>
        </RadioGroup>
        <RelativeLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">
                <LinearLayout
                    android:id="@+id/account_login_layout"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/white_transparent">
                    <EditText
                        android:id="@+id/account_login_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/account_name"
                        android:background="@null"
                        android:layout_marginLeft="10dp"
                        android:textColorHint="@color/grey_c8"/>
                    <View
                        android:layout_width="300dp"
                        android:layout_height="1dp"
                        android:background="@color/divider_2"
                        android:layout_gravity="center_horizontal"/>
                    <EditText
                        android:id="@+id/account_login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:hint="@string/account_login_password"
                        android:textColorHint="@color/grey_c8"/>

                </LinearLayout>

                <!--dynamic login layout-->
                <LinearLayout
                    android:id="@+id/dynamic_login_layout"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/white_transparent"
                    android:visibility="gone">
                    <EditText
                        android:id="@+id/dynamic_login_phone_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="phone"
                        android:hint="@string/dynamic_login_phone_number"
                        android:background="@null"
                        android:layout_marginLeft="10dp"
                        android:textColorHint="@color/grey_c8"/>
                    <View
                        android:layout_width="300dp"
                        android:layout_height="1dp"
                        android:background="@color/divider_2"
                        android:layout_gravity="center_horizontal"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/dynamic_login_password_et"
                            android:layout_width="230dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:hint="@string/dynamic_login_password"
                            android:textColorHint="@color/grey_c8"/>
                        <Button
                            android:id="@+id/send_dynamic_password_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:text="@string/send_dynamic_password"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/register_new_account_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/account_register"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/find_password_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/find_password_btn_text"
                        android:textColor="@color/white"
                        android:layout_marginLeft="170dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_btn"
                    android:textColor="@color/white"
                    android:textSize="10pt"
                    android:background="@drawable/common_btn_big_selector"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>