<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/save_dialog_ll"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="400dp"
    android:gravity="center_horizontal"
    android:layout_alignParentTop="true"
    android:background="@drawable/record_save_dialog_bg">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:paddingTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveto"
            android:textColor="@color/font_black_28"
            android:textSize="10pt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/record_save_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/exit_ok"
            android:textColor="@color/white"
            android:textSize="10pt"
            android:background="@drawable/common_btn_big_selector"/>
        <Button
            android:id="@+id/record_save_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/exit_cancel"
            android:textColor="@color/white"
            android:textSize="10pt"
            android:layout_marginLeft="50dp"
            android:background="@drawable/common_btn_big_selector"/>
    </LinearLayout>

</RelativeLayout>