<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="340dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/return_btn"
            android:layout_width="18dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/return_btn"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:id="@+id/account_login_layout"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/white_transparent">
                <EditText
                    android:id="@+id/register_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/account_name"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/grey_c8"/>
                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:background="@color/divider_2"
                    android:layout_gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/register_phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/phone_number"
                    android:background="@null"
                    android:inputType="phone"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/grey_c8"/>
                <View
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:background="@color/divider_2"
                    android:layout_gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/register_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/account_login_password"
                    android:textColorHint="@color/grey_c8"/>
                </LinearLayout>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_btn"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:background="@drawable/common_btn_big_selector"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>