<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_ea">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/main_fragment_msg_icon"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/msg_remind_btn"/>
            <Button
                android:id="@+id/main_fragment_new_msg_icon"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_new_msg_remind"
                android:visibility="gone"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/user_head_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/icon_user_login"
                android:visibility="gone"/>

            <Button
                android:id="@+id/user_name_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="用户名"
                android:textColor="@color/blue_light"
                android:textSize="10pt"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/register_login_btn"
            style="@style/common_blue_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_login_btn_txt"
            android:textSize="10pt"/>
        <View
            android:id="@+id/login_divider"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:background="@color/divider_2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/share_concern_info_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/my_share_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_share_tv"/>
                <TextView
                    android:id="@+id/share_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="180dp">
                <TextView
                    android:id="@+id/my_concern_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_concern_tv"/>
                <TextView
                    android:id="@+id/concern_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/my_collection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mine_fragment_my_collection"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_light"
                android:textSize="9pt"/>
        </LinearLayout>
        <View
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/divider_2"/>
        <LinearLayout
            android:id="@+id/my_interest_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mine_fragment_my_interest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_interest"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_light"
                android:textSize="9pt"/>
        </LinearLayout>
        <View
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/divider_2"/>
        <LinearLayout
            android:id="@+id/my_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mine_fragment_my_setting" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/my_setting"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_light"
                android:textSize="9pt"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>